<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              android:layout_width="match_parent" android:layout_height="match_parent"
              android:gravity="center_horizontal"
              android:orientation="vertical"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context=".ui.login.LoginActivity">


    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical">

            <ImageView
                    android:layout_width="@dimen/splash_image_width"
                    android:layout_height="@dimen/splash_image_height"
                    android:src="@drawable/logo"
                    android:layout_gravity="center"/>


            <android.support.v7.widget.RecyclerView
                    android:layout_marginTop="@dimen/margin_20"
                    android:id="@+id/activity_language_recycler"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:reverseLayout="false"/>

            <android.support.design.widget.TextInputLayout
                    android:id="@+id/activity_mobile_TXT"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10"
                    app:errorEnabled="false">

                <android.support.v7.widget.AppCompatEditText
                        android:id="@+id/activity_mobile_EDT"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/label_mobile_number"
                        android:inputType="phone"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                    android:id="@+id/activity_OTP_Layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="@dimen/margin_10"
                    android:weightSum="2"
                    android:visibility="gone">


                <android.support.design.widget.TextInputLayout
                        android:id="@+id/activity_OTP_TXT"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.2"
                        app:errorEnabled="false">

                    <android.support.v7.widget.AppCompatEditText
                            android:id="@+id/activity_OTP_EDT"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/label_enter_otp"
                            android:inputType="number"
                            android:maxLength="5"
                            android:maxLines="1"
                            android:singleLine="true"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                        android:id="@+id/activity_resend_BTN"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:layout_weight="0.8"
                        android:background="@drawable/bg_rounded_corner_next_btn"
                        android:layout_margin="@dimen/margin_10"
                        android:text="@string/label_resend_otp"
                        android:textColor="@color/white"
                        android:visibility="visible"/>

            </LinearLayout>


            <Button
                    android:id="@+id/login_get_otp_BUT"
                    android:layout_width="@dimen/login_button_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/circle_green_design"
                    android:text="@string/label_get_otp"
                    android:textColor="@color/white"
                    android:visibility="visible"/>

            <Button
                    android:id="@+id/login_submit_BUT"
                    android:layout_width="@dimen/login_button_width"
                    android:layout_height="@dimen/login_button_height"
                    android:layout_marginTop="@dimen/margin_20"
                    android:layout_marginBottom="@dimen/margin_10"
                    android:background="@drawable/circle_green_design"
                    android:text="@string/label_submit"
                    android:textColor="@color/white"
                    android:visibility="gone"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>